<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@drawable/widget_background"
	android:padding="5dp"
	android:layout_width="@dimen/two_cell_widget"
	android:layout_height="wrap_content">
	<LinearLayout
	  android:id="@+id/widget_text_layout"
	  android:orientation="vertical"
	  android:layout_width="@dimen/one_cell_widget"
	  android:layout_height="wrap_content">
	  	<TextView
	  		android:id="@+id/widget_title_text"
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:text="@string/app_name"
	  		android:textColor="@android:color/black" />
	  	<TextView
	  		android:id="@+id/widget_amount_text"
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:text="@string/default_widget_amount"
	  		android:textSize="12sp"
	  		android:textColor="@color/amount_color" />
	  	 <TextView
	  	 	android:id="@+id/widget_percent_text"
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:text="@string/default_widget_percent"
	  		android:textColor="@color/negative_delta" />
	</LinearLayout>
	<Button
		android:id="@+id/widget_add_button"
		android:layout_centerVertical="true"
		android:text="@string/two_cell_widget_add"
		android:layout_toRightOf="@id/widget_text_layout"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
</RelativeLayout>